# sqlgrok

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  cbindgen.toml
.github/workflows/: ci.yml  ffi-build.yml  release.yml
benches/: parser_bench.rs
benchmarks/: sqlglot_comparison.md
correctness/cases/: cinch_sqlite.jsonl
correctness/reports/: cinch_sqlite.jsonl  cinch_sqlite.md
docs/: ARCHITECTURE.md  AST_INVENTORY.md  CINCH_CORRECTNESS.md  PARITY.md  PERFORMANCE.md  ROADMAP.md  developer-guide.md  guide.md  installation.md  reference.md
examples/: ast_traversal.rs  builder.rs  comments.rs  diff.rs  executor.rs  ffi_example.c  ffi_example.cpp  parse_and_generate.rs  transpile.rs
packaging/homebrew/: sqlglot.rb.template  sqlgrok.rb.template
packaging/test/: Dockerfile.pkg-test
parity/budgets/: sqlglot_suite_transpile_mysql_sqlite.json  sqlglot_suite_transpile_postgres_sqlite.json  sqlglot_suite_transpile_sqlite_sqlite.json
parity/cases/: similar_to.jsonl  smoke.jsonl  transpile_mysql_sqlite.jsonl  transpile_postgres_sqlite.jsonl
parity/reports/: sqlglot_suite_forced_transpile_mysql_sqlite.md  sqlglot_suite_forced_transpile_mysql_sqlite_buckets.md  sqlglot_suite_forced_transpile_postgres_sqlite.md  sqlglot_suite_forced_transpile_postgres_sqlite_buckets.md  sqlglot_suite_forced_transpile_sqlite_sqlite.md  sqlglot_suite_forced_transpile_sqlite_sqlite_buckets.md  sqlglot_suite_transpile_mysql_sqlite.jsonl  sqlglot_suite_transpile_mysql_sqlite.md  sqlglot_suite_transpile_postgres_sqlite.jsonl  sqlglot_suite_transpile_postgres_sqlite.md  sqlglot_suite_transpile_sqlite_sqlite.jsonl  sqlglot_suite_transpile_sqlite_sqlite.md  transpile_mysql_sqlite.jsonl  transpile_mysql_sqlite.md  transpile_postgres_sqlite.jsonl  transpile_postgres_sqlite.md  transpile_sqlite_sqlite.jsonl  transpile_sqlite_sqlite.md
python/: Cargo.toml  pyproject.toml
python/python/sqlgrok/: __init__.py  sqlglot_bridge.py
python/src/: lib.rs
python/tests/: test_transpile.py
src/: compat.rs  ffi.rs  lib.rs
src/ast/: types.rs
src/builder/: mod.rs
src/dialects/: mod.rs  plugin.rs  time.rs
src/diff/: mod.rs
src/errors/: mod.rs
src/executor/: engine.rs  eval.rs  mod.rs
src/generator/: mod.rs  sql_generator.rs
src/optimizer/: annotate_types.rs  lineage.rs  mod.rs  pushdown_predicates.rs  qualify_columns.rs  scope_analysis.rs  unnest_subqueries.rs
src/parser/: mod.rs  sql_parser.rs
src/planner/: mod.rs
src/schema/: mod.rs
src/tokens/: mod.rs  tokenizer.rs
tests/: integration_tests.rs  sqlglot_parity.rs  test_cli.rs  test_comments.rs  test_compat.rs  test_dialects.rs  test_executor.rs  test_expressions.rs  test_optimizer.rs  test_plugin.rs  test_quoted_aliases.rs  test_transpile.rs
