[package]
name = "sqlglot-rust"
version = "0.9.23"
edition = "2024"
description = "A SQL parser, optimizer, and transpiler library inspired by Python's sqlglot"
license = "MIT"
readme = "README.md"
repository = "https://github.com/protegrity/sql-glot-rust"
homepage = "https://github.com/protegrity/sql-glot-rust"
documentation = "https://github.com/protegrity/sql-glot-rust/blob/master/docs/guide.md"
keywords = ["sql", "parser", "transpiler", "ast", "database"]
categories = ["parser-implementations", "database"]

[features]
default = []
cli = ["clap"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
clap = { version = "4", features = ["derive"], optional = true }

[[bin]]
name = "sqlglot"
path = "src/bin/sqlglot.rs"
required-features = ["cli"]

[dev-dependencies]
pretty_assertions = "1"
criterion = { version = "0.8", features = ["html_reports"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"

[[bench]]
name = "parser_bench"
harness = false
