[package]
name = "sqlgrok"
version = "0.9.27"
edition = "2024"
description = "A pure-Rust SQLGlot port with Python SQLGlot parity tests"
license = "MIT"
readme = "README.md"
repository = "https://github.com/russellromney/sqlgrok"
homepage = "https://github.com/russellromney/sqlgrok"
documentation = "https://github.com/russellromney/sqlgrok/blob/master/docs/guide.md"
keywords = ["sql", "parser", "transpiler", "ast", "database"]
categories = ["parser-implementations", "database"]
exclude = ["packaging/test/", ".dockerignore", ".github/"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
default = []
cli = ["clap"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
regex = "1"
clap = { version = "4", features = ["derive"], optional = true }

[[bin]]
name = "sqlgrok"
path = "src/bin/sqlgrok.rs"
required-features = ["cli"]

[[bin]]
name = "xtask"
path = "src/bin/xtask.rs"

[dev-dependencies]
pretty_assertions = "1"
criterion = { version = "0.8", features = ["html_reports"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"

[[bench]]
name = "parser_bench"
harness = false

# ── Debian package (cargo-deb) ────────────────────────────────────────────
[package.metadata.deb]
maintainer = "Russell Romney <russellromney@users.noreply.github.com>"
copyright = "2026 Russell Romney and sqlgrok contributors; 2026 Protegrity"
extended-description = """\
sqlgrok is a SQL parser, optimizer, and transpiler library \
targeting behavioral parity with Python SQLGlot. This package provides the sqlgrok CLI \
and shared/static C FFI libraries."""
section = "database"
priority = "optional"
assets = [
    ["target/release/sqlgrok",                "usr/bin/sqlgrok",                            "755"],
    ["target/release/libsqlgrok.so",          "usr/lib/libsqlgrok.so",                     "644"],
    ["target/release/libsqlgrok.a",           "usr/lib/libsqlgrok.a",                      "644"],
    ["target/ffi/include/sqlglot.h",          "usr/include/sqlglot.h",                     "644"],
    ["README.md",                             "usr/share/doc/sqlgrok/README.md",           "644"],
    ["LICENSE",                               "usr/share/doc/sqlgrok/LICENSE",             "644"],
    ["NOTICE",                                "usr/share/doc/sqlgrok/NOTICE",              "644"],
]

# ── RPM package (cargo-generate-rpm) ─────────────────────────────────────
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/sqlgrok",            dest = "/usr/bin/sqlgrok",            mode = "0755" },
    { source = "target/release/libsqlgrok.so",      dest = "/usr/lib64/libsqlgrok.so",      mode = "0644" },
    { source = "target/release/libsqlgrok.a",       dest = "/usr/lib64/libsqlgrok.a",       mode = "0644" },
    { source = "target/ffi/include/sqlglot.h",      dest = "/usr/include/sqlglot.h",      mode = "0644" },
    { source = "README.md",                         dest = "/usr/share/doc/sqlgrok/README.md", mode = "0644" },
    { source = "LICENSE",                           dest = "/usr/share/doc/sqlgrok/LICENSE",   mode = "0644" },
    { source = "NOTICE",                            dest = "/usr/share/doc/sqlgrok/NOTICE",    mode = "0644" },
]
