[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "sqlgrok"
version = "0.9.27"
description = "Python test shim for sqlgrok, a pure-Rust SQLGlot port"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "sqlgrok._native"
python-source = "python"
features = ["pyo3/extension-module"]
